Working weather generator

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,8 @@
 platform = espressif32
 board = denky32
 framework = arduino
+monitor_speed = 57600
 lib_deps = 
 	bblanchon/ArduinoJson@^7.0.3
-	; majicdesigns/MD_MAX72XX@^3.5.1
-	; majicdesigns/MD_Parola@^3.7.2
+	majicdesigns/MD_MAX72XX@^3.5.1
+	majicdesigns/MD_Parola@^3.7.2
